# ati-project

./: .gitignore  Dockerfile  docker-compose.yml  docker-entrypoint.sh  package-lock.json  pyproject.toml
apps/post/: admin.py  models.py  serializers.py  urls.py  views.py
apps/post/migrations/: 0001_initial.py  0002_initial.py
apps/user/: admin.py  managers.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py  0002_user_cover_image_user_profile_image.py
blog-frontend/: .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json
blog-frontend/src/: App.js  index.js  store.js
blog-frontend/src/components/: CreatePost.jsx  Login.js  PostDetail.jsx  Register.js  UserSearch.js
blog-frontend/src/components/blog/: BlogCardHorizontal.js  BlogList.jsx
blog-frontend/src/containers/pages/: Blog.jsx  Error404.jsx  Profile.js
blog-frontend/src/hocs/layout/: Layout.js
blog-frontend/src/hocs/routes/: Routes.js
blog-frontend/src/redux/actions/auth/: auth.js  authActions.d.ts  types.js
blog-frontend/src/redux/actions/blog/: blog.js  types.js
blog-frontend/src/redux/actions/user/: types.js  user.js
blog-frontend/src/redux/reducers/: auth.js  blog.js  index.js  user.js
blog-frontend/src/styles/: index.css
core/: celery.py  settings.py  urls.py
utils/: pagination.py  permissions.py  post_services.py
